feat(externalref): Add external ref to obligations
