# cmd/laas/docs/swagger.yaml
@@ -2,6 +2,8 @@ basePath: /api/v1
 definitions:
   datatypes.JSONType-models_LicenseDBSchemaExtension:
     type: object
+  datatypes.JSONType-models_ObligationSchemaExtension:
+    type: object
   models.APICollection:
     properties:
       authenticated:
@@ -392,6 +394,8 @@ definitions:
         $ref: '#/definitions/models.ObligationClassification'
       comment:
         type: string
+      externalRef:
+        $ref: '#/definitions/datatypes.JSONType-models_ObligationSchemaExtension'
       id:
         type: integer
       licenses:
@@ -451,6 +455,8 @@ definitions:
         type: string
       comment:
         type: string
+      external_ref:
+        $ref: '#/definitions/models.ObligationSchemaExtension'
       modifications:
         example: true
         type: boolean
@@ -556,6 +562,13 @@ definitions:
         example: 200
         type: integer
     type: object
+  models.ObligationSchemaExtension:
+    properties:
+      obligation_explanation:
+        type: string
+      obligation_suffix:
+        type: string
+    type: object
   models.ObligationType:
     properties:
       type:
@@ -588,6 +601,9 @@ definitions:
         type: string
       comment:
         type: string
+      external_ref:
+        additionalProperties: true
+        type: object
       modifications:
         example: true
         type: boolean
